fix nav overflow

--- a/public/app.css
+++ b/public/app.css
@@ -190,8 +190,9 @@ a.red {
 
 .constit-nav {
   display: grid;
-  grid-auto-flow: column;
   align-items: center;
+  grid-gap: 0.3em;
+  grid-template-columns: repeat(auto-fill, minmax(186px, 1fr));
   margin: auto;
   max-width: 400px;
 }
